# njalla-cli

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml  flake.nix  module.nix
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md
src/: client.rs  config.rs  error.rs  lib.rs  main.rs  output.rs  types.rs
src/commands/: dns.rs  domains.rs  mod.rs  register.rs  search.rs  status.rs  validate.rs  wallet.rs
tests/: integration.rs
